bin_PROGRAMS = pup
pup_SOURCES = bin.c comdec.c c_zlib.c c_pack2.c c_lzss.c c_dat.c restable.c meta.c dat.c dat2.c dpk4.c gob.c grp.c labn.c pack.c pack2.c pak.c resource1.c resource2.c rff.c viv.c vpp.c wad23.c main.c
dist_doc_DATA = README.md ideas.txt

check_PROGRAMS = test
test_SOURCES = bin.c test.c
TESTS = $(check_PROGRAMS)
